Fix texture clipping artifacts on small screens

--- a/test.css
+++ b/test.css
@@ -12,6 +12,7 @@ html {
 
 h1 {
     font-weight: normal;
+    margin: 0;
 }
 
 body {
